deploy/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: dotnet-apiserver
  labels:
    app: dotnet-apiserver
    app.kubernetes.io/component: dotnet-apiserver
    app.kubernetes.io/instance: dotnet-apiserver
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/component: dotnet-apiserver
  ports:
    - name: 80-tcp
      protocol: TCP
      port: 80
      targetPort: 80
