deploy/base/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: apiserver
  labels:
    app: dotnet-apiserver
    app.kubernetes.io/component: route
    app.kubernetes.io/instance: dotnet-apiserver
spec:
  to:
    kind: Service
    name: dotnet-apiserver
    weight: 100
  port:
    targetPort: 80-tcp
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
